# cain

./: .gitignore  Cain.spec  README.md  SaveEditor.spec  build.py  install.sh  pyproject.toml  requirements.txt
cli/: __init__.py  cain.py  d2edit.py
core/: bitreader.py  d2r.py  d2r_tables.py  d2s.py  edit.py  item.py  item_v2.py  mpq.py  plugy.py  stash.py  tables.py  validate.py
docs/superpowers/plans/: 2026-06-08-in-memory-edit-model.md
docs/superpowers/specs/: 2026-06-07-cain-cli-and-build-advisor-design.md  2026-06-08-in-memory-edit-model-design.md
gui/: __init__.py  app.py  server.py
native/: __init__.py  app.py
packaging/linux/: Cain.desktop.in  SaveEditor.desktop.in
scripts/: d2r_roundtrip.py  install-linux-desktop.sh  preview_native.py  test_d2r.py  test_session.py
skills/pd2-build-advisor/: SKILL.md
testdata/: Ancksunamum.d2s
